# armor_auto_aim

./: .gitignore
armor_detector/: CMakeLists.txt  package.xml
armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
armor_detector/test/: detector_test.cpp
auto_aim_interfaces/: CMakeLists.txt  package.xml
auto_aim_interfaces/msg/: DebugArmor.msg
